blurred navbar and details style fixes

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   transition: all 0.3s ease-in-out;
 }
 .card.link:hover {
-  transform: scale(1.02);
+  transform: scale(1.03);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
   z-index: 1;
 }
@@ -62,20 +62,17 @@ b {
   font-weight: 600;
 }
 
-.bg-white-opacity-90 {
-  --bs-bg-opacity: 0.92;
+.bg-white-opacity-blur {
+  --bs-bg-opacity: 0.7;
   background-color: rgba(var(--bs-white-rgb), var(--bs-bg-opacity)) !important;
+  backdrop-filter: blur(5px);
 }
 
 .navbar .navbar-brand {
   border-radius: 5px;
   border: 1px solid #ccc;
   padding: 0.5rem;
-}
-
-.avatar {
-  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(100%);
+  background-color: rgba(var(--bs-white-rgb), var(--bs-bg-opacity));
 }
 
 .vh-75 {
@@ -97,6 +94,10 @@ b {
 a.text-grey:hover {
   color: rgba( 0,0,0 , 0.75)!important;
 } 
+
+.btn-outline-primary {
+  background-color: rgba(var(--bs-white-rgb), var(--bs-bg-opacity));
+}
 
 /* .anchor {
     scroll-margin-top: 60px;
